# fastapi-rest-api

./: .gitignore  .txt  main.py  pyproject.toml
core/: config.py  database.py
enums/: month_enum.py  periodicy_enum.py  season_enum.py  theme_enum.py
models/: __init__.py  users_models.py
models/items/: items.py  items_models.py  lang_enum.py
models/items_models_package/: books_models.py  items_models.py  magazines_models.py
models/items_models_package/books_models_package/: books_models.py  cover_enum.py  genre_enum.py
models/items_models_package/magazines_models_package/: magazines_models.py
models/items_models_package/news_models_package/: news_models.py
schemas/: user_schema.py
schemas/items_schemas_package/: item_schema.py
schemas/items_schemas_package/books_schemas_package/: book_schema.py
schemas/items_schemas_package/magazines_schemas_package/: magazine_schema.py
schemas/items_schemas_package/news_schemas_package/: news_schema.py
src/app/: main.py
src/app/items/: models.py  router.py  schemas.py  services.py
src/app/items/enums/: __init__.py  cover_enum.py  month_enum.py  season_enum.py
src/app/models/: __init__.py  base.py
src/app/users/: models.py
src/core/: database.py
views/: view.py
