[project]
name = "fastapi-rest-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "black>=26.3.1",
    "fastapi>=0.135.3",
    "greenlet>=3.3.2",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]
